--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@ gtag('config', 'UA-44534026-1');
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/grep.html">Grep</a></h2>
+<div class="article-link-date">
+2020년 4월 24일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
+<div class="article-link-date">
+2020년 4월 24일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/nextstep.html">NeXTSTEP</a></h2>
 <div class="article-link-date">
 2020년 4월 24일 수정</div>
@@ -153,20 +167,6 @@ gtag('config', 'UA-44534026-1');
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
-<div class="article-link-date">
-2020년 4월 22일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/pyenv.html">pyenv</a></h2>
-<div class="article-link-date">
-2020년 4월 22일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/dd.html">dd</a></h2>
 <div class="article-link-date">
 2020년 4월 22일 수정</div>
 </div>
