--- a/note/javascript.html
+++ b/note/javascript.html
@@ -63,27 +63,27 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>Javascript</h1>
-<div class="title-date">2020년 4월 22일 수정</div>
+<div class="title-date">2020년 4월 24일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org3552075">노트</a>
+<li><a href="#org0f2d20d">노트</a>
 <ul>
-<li><a href="#orga80f7eb">모듈(Module)</a></li>
-<li><a href="#org92917a0">스프레드(Spreads) 연산자</a></li>
-<li><a href="#orgfbc4420">튜플 비슷한 문법</a></li>
+<li><a href="#org2823a3a">모듈(Module)</a></li>
+<li><a href="#org64d32f3">스프레드(Spreads) 연산자</a></li>
+<li><a href="#orgfdb8dc1">튜플 비슷한 문법</a></li>
 </ul>
 </li>
-<li><a href="#org1dbd9f4">실전(?) 메모</a>
+<li><a href="#org55a563e">실전(?) 메모</a>
 <ul>
-<li><a href="#org385ebb8">요소 얻기</a></li>
-<li><a href="#org06463fc">특정 블록에 HTML 넣기</a></li>
-<li><a href="#org6b9c6f0">콘텐츠 높이 구하기</a></li>
-<li><a href="#org454b16b">특정 태그 앞에 요소 넣기</a></li>
+<li><a href="#orgc9d1c1d">요소 얻기</a></li>
+<li><a href="#org0a3d1ad">특정 블록에 HTML 넣기</a></li>
+<li><a href="#orgbb2e26e">콘텐츠 높이 구하기</a></li>
+<li><a href="#org4f8c46e">특정 태그 앞에 요소 넣기</a></li>
 </ul>
 </li>
-<li><a href="#org79d09d5">외부 링크</a></li>
+<li><a href="#org891acc0">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -101,17 +101,13 @@ gtag('config', 'UA-44534026-1');
 버전은 ES6를 기준으로 한다.
 </p>
 
-<div id="outline-container-org3552075" class="outline-2">
-<h2 id="org3552075">노트</h2>
-<div class="outline-text-2" id="text-org3552075">
-<p>
-여기에 붙는 글들은 정해진 주제 없이 필요할 때 마다 붙는 메모 형식으로
-작성됩니다. 후에 글이 모이면 별도의 글로 분리될 수도 있습니다.
-</p>
+<div id="outline-container-org0f2d20d" class="outline-2">
+<h2 id="org0f2d20d">노트</h2>
+<div class="outline-text-2" id="text-org0f2d20d">
 </div>
-<div id="outline-container-orga80f7eb" class="outline-3">
-<h3 id="orga80f7eb">모듈(Module)</h3>
-<div class="outline-text-3" id="text-orga80f7eb">
+<div id="outline-container-org2823a3a" class="outline-3">
+<h3 id="org2823a3a">모듈(Module)</h3>
+<div class="outline-text-3" id="text-org2823a3a">
 <p>
 일반적으로 모듈은 아래와 같은 형식으로 쓰인다.
 </p>
@@ -163,9 +159,9 @@ console.log(someValues.value2);
 </div>
 </div>
 </div>
-<div id="outline-container-org92917a0" class="outline-3">
-<h3 id="org92917a0">스프레드(Spreads) 연산자</h3>
-<div class="outline-text-3" id="text-org92917a0">
+<div id="outline-container-org64d32f3" class="outline-3">
+<h3 id="org64d32f3">스프레드(Spreads) 연산자</h3>
+<div class="outline-text-3" id="text-org64d32f3">
 <p>
 스프레드 연산자는 <code>...</code> 으로 표기되며
 이름처럼 펼치거나 확산한다라는 의미로 동작한다.
@@ -228,9 +224,9 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgfbc4420" class="outline-3">
-<h3 id="orgfbc4420">튜플 비슷한 문법</h3>
-<div class="outline-text-3" id="text-orgfbc4420">
+<div id="outline-container-orgfdb8dc1" class="outline-3">
+<h3 id="orgfdb8dc1">튜플 비슷한 문법</h3>
+<div class="outline-text-3" id="text-orgfdb8dc1">
 <div class="org-src-container">
 <pre class="src src-javascript"><span style="color: #51afef;">let</span> [<span style="color: #dcaeea;">foo</span>, <span style="color: #dcaeea;">bar</span>] = [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>]
 [foo, bar] = [bar, foo]
@@ -242,13 +238,13 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </div>
 </div>
 </div>
-<div id="outline-container-org1dbd9f4" class="outline-2">
-<h2 id="org1dbd9f4">실전(?) 메모</h2>
-<div class="outline-text-2" id="text-org1dbd9f4">
+<div id="outline-container-org55a563e" class="outline-2">
+<h2 id="org55a563e">실전(?) 메모</h2>
+<div class="outline-text-2" id="text-org55a563e">
 </div>
-<div id="outline-container-org385ebb8" class="outline-3">
-<h3 id="org385ebb8">요소 얻기</h3>
-<div class="outline-text-3" id="text-org385ebb8">
+<div id="outline-container-orgc9d1c1d" class="outline-3">
+<h3 id="orgc9d1c1d">요소 얻기</h3>
+<div class="outline-text-3" id="text-orgc9d1c1d">
 <div class="org-src-container">
 <pre class="src src-javascript">document.getElementById(<span style="color: #98be65;">'some-id'</span>)
 document.getElementsByClassName(<span style="color: #98be65;">'some-class'</span>)[<span style="color: #da8548; font-weight: bold;">0</span>]
@@ -260,9 +256,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-org06463fc" class="outline-3">
-<h3 id="org06463fc">특정 블록에 HTML 넣기</h3>
-<div class="outline-text-3" id="text-org06463fc">
+<div id="outline-container-org0a3d1ad" class="outline-3">
+<h3 id="org0a3d1ad">특정 블록에 HTML 넣기</h3>
+<div class="outline-text-3" id="text-org0a3d1ad">
 <p>
 아래는 some-id라는 아이디의 div 블록 내부 내용을 지정하는 예제다.
 </p>
@@ -272,9 +268,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </div>
 </div>
 </div>
-<div id="outline-container-org6b9c6f0" class="outline-3">
-<h3 id="org6b9c6f0">콘텐츠 높이 구하기</h3>
-<div class="outline-text-3" id="text-org6b9c6f0">
+<div id="outline-container-orgbb2e26e" class="outline-3">
+<h3 id="orgbb2e26e">콘텐츠 높이 구하기</h3>
+<div class="outline-text-3" id="text-orgbb2e26e">
 <p>
 웹 브라우저에 표시되는 내용의 높이(height)를 구하는 방법이다.
 </p>
@@ -294,9 +290,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-org454b16b" class="outline-3">
-<h3 id="org454b16b">특정 태그 앞에 요소 넣기</h3>
-<div class="outline-text-3" id="text-org454b16b">
+<div id="outline-container-org4f8c46e" class="outline-3">
+<h3 id="org4f8c46e">특정 태그 앞에 요소 넣기</h3>
+<div class="outline-text-3" id="text-org4f8c46e">
 <p>
 수동으로 노드를 만들어서 특정 태그 노드 앞에 붙이는 예제다.
 </p>
@@ -323,9 +319,9 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </div>
 </div>
 </div>
-<div id="outline-container-org79d09d5" class="outline-2">
-<h2 id="org79d09d5">외부 링크</h2>
-<div class="outline-text-2" id="text-org79d09d5">
+<div id="outline-container-org891acc0" class="outline-2">
+<h2 id="org891acc0">외부 링크</h2>
+<div class="outline-text-2" id="text-org891acc0">
 <ul class="org-ul">
 <li><a target="_blank" href="https://ko.javascript.info/">🌏모던 JavaScript 튜토리얼</a></li>
 <li><a target="_blank" href="https://junhobaik.github.io/es2016-es2020/">🌏ECMAScript ES2016~ES2020 정리</a></li>
