--- a/note/shell.html
+++ b/note/shell.html
@@ -82,6 +82,13 @@ gtag('config', 'UA-44534026-1');
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/grep.html">Grep</a></h2>
+<div class="article-link-date">
+2020년 4월 24일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/xcode.html">Xcode</a></h2>
 <div class="article-link-date">
 2020년 4월 23일 수정</div>
