--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
 <h1>❏ POST의 최신 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/post/many-ad-and.html">광고를 덕지덕지 바른 후</a></h2>
+<div class="article-link-date">
+2020년 4월 27일 작성</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/post/humanlike-google-2.html">구글의 인간력(?)과의 싸움은 계속된다</a></h2>
 <div class="article-link-date">
 2020년 4월 24일 작성</div>
