--- a/note/index.html
+++ b/note/index.html
@@ -63,6 +63,13 @@
 <section class="content">
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/gitignore.html">gitignore</a></h2>
+<div class="article-link-date">
+2020년 4월 28일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/implementation.html">구현</a></h2>
 <div class="article-link-date">
 2020년 4월 26일 수정</div>
