--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
  <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
+ <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
 </nav>
 </div>
 </header>
@@ -184,6 +185,16 @@
 <h2><a class="article-link-title" href="/note/web-dev-links.html">웹 개발 관련 링크</a></h2>
 <div class="article-link-date">
 2020년 4월 25일 수정</div>
+</div>
+</div>
+</div>
+<div class="summary-container">
+<h1>❏ LOG의 최신 글</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/log/2020-04.html">2020년 4월의 로그</a></h2>
+<div class="article-link-date">
+2020년 4월 29일 수정</div>
 </div>
 </div>
 </div>
