--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/promise.html">Promise</a></h2>
+<div class="article-link-date">
+2020년 5월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/mongodb.html">MongoDB</a></h2>
 <div class="article-link-date">
 2020년 5월 18일 수정</div>
@@ -190,13 +197,6 @@
 <h2><a class="article-link-title" href="/note/macos.html">macOS</a></h2>
 <div class="article-link-date">
 2020년 5월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/date.html">date</a></h2>
-<div class="article-link-date">
-2020년 5월 12일 수정</div>
 </div>
 </div>
 </div>
