--- a/note/index.html
+++ b/note/index.html
@@ -57,6 +57,13 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/promise.html">Promise</a></h2>
+<div class="article-link-date">
+2020년 5월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/mongodb.html">MongoDB</a></h2>
 <div class="article-link-date">
 2020년 5월 18일 수정</div>
