--- a/note/apple.html
+++ b/note/apple.html
@@ -85,9 +85,16 @@
 <div class="outline-text-2" id="text-9e164d75">
 <p>
 맥(Mac) 혹은 매킨토시(Machintosh)는 애플에서 개발한 개인용 데스크톱 PC의 이름이다.
-현재는 맥북(Macbook), 맥북프로(Macbook Pro), 아이맥(iMac), 아이맥 프로(iMac Pro), 맥프로(Mac Pro) 등 다양한 타입의 개인용 맥 제품을 출시하고 있다.
+현재는 맥북(Macbook), 맥북프로(Macbook Pro), 아이맥(iMac) 등의 다양한 개인용 맥 제품을 가지고 있다.
+이 외에 기업용 워크스테이션인 아이맥 프로(iMac Pro), 맥 프로(Mac Pro) 또한 맥 분류에 해당한다.
 현재의 애플을 있게 한 주역 중 하나다.
 </p>
+<blockquote>
+<p>
+맥 프로와 맥북 프로를 같은 제품으로 오해하는 사람들이 간간히 있는데, 이 둘은 완전히 다른 제품이다.
+맥북 프로는 뛰어난 성능의 개인용 노트북 제품이고, 맥 프로는 어마어마한 하드웨어를 갖추고 있는 아주 비싼 기업용 워크스테이션이다.
+</p>
+</blockquote>
 </div>
 </div>
 <div id="outline-container-20adf68e" class="outline-2">
@@ -126,7 +133,7 @@
 <p>
 <a href="macos.html">macOS</a>를 더불어 <a href="ios.html">iOS</a>와 같은 유명한 OS(Operating System) 소프트웨어를 개발하기도 했지만,
 iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 영향을 끼친 소프트웨어를 개발하기도 했다.
-물론 이 외에도 다양한 소프트웨어를 개발하고 보급하고 있지만 이 둘이 아무래도 가장 큰 의미를 가지고 있는 것 같다.
+물론 이 외에도 로직 프로나 <a href="fcpx.html">Final Cut Pro X</a> 같은 멀티미디어 소프트웨어도 유명하다.
 </p>
 </div>
 </div>
