--- a/note/yaml.html
+++ b/note/yaml.html
@@ -1,55 +1,55 @@
-<!DOCTYPE html><html lang="ko"><head><meta charset="utf-8"><meta name="viewport"content="width=device-width,initial-scale=1"><meta http-equiv="Content-Type"content="text/html; charset=UTF-8"><link rel="stylesheet"href="/static/style.min.css"><meta name="battery-savings"content="allow-reduced-framerate allow-reduced-script-speed"><title>YAML - Seorenn Note</title><meta name="twitter:title"content="YAML"><meta name="og:title"content="YAML"><meta name="description"content="YAML의 간단한 소개"><meta name="twitter:description"content="YAML의 간단한 소개"><meta name="og:description"content="YAML의 간단한 소개"><link rel="canonical"href="https://seorenn.github.io/note/yaml.html"><meta property="og:url"content="https://seorenn.github.io/note/yaml.html"><link rel="shortcut icon"type="image/x-icon"href="/static/favicon.ico"><meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png"><meta property="og:image"content="https://seorenn.github.io/static/seorenn-symbol.png"><meta property="og:image:width"content="520"><meta property="og:image:height"content="329"><meta name="twitter:card"content="summary"><meta name="twitter:site"content="@seorenn"><meta name="twitter:creator"content="@seorenn"><meta property="og:type"content="article"><meta property="og:site_name"content="Seorenn"><meta property="og:locale"content="ko_KR"><meta name="referrer"content="unsafe-url"><meta name="robots"content="follow,index"><meta name="google-site-verification"content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug"><meta name="naver-site-verification"content="24609571c04926ab1220d5d02610efa1c9e12221"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1071465863344332"crossorigin="anonymous"></script><script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-44534026-1")</script></head><body><div class="header-content"><header class="top-header"><div class="logo-container"><span class="vertical-center-helper"></span> <a href="/"title="Seorenn"><img class="site-logo"src="/static/seorenn-note-logo-light.png"alt="Seorenn Note"></a><nav><span class="vertical-center-helper"></span> <a href="/"title="Home">HOME</a> | <a href="/note"title="All Notes">NOTES</a> | <a href="https://seorenn.tistory.com"title="Blog"target="_blank">LOGS</a></nav></div></header></div><div class="content-container"><section class="content"><div class="mid-ad-container"><ins class="adsbygoogle mid-ad"style="display:block"data-ad-client="ca-pub-1071465863344332"data-ad-slot="4306465772"data-ad-format="auto"data-full-width-responsive="true"></ins><script>(adsbygoogle=window.adsbygoogle||[]).push({})</script></div><header><h1>YAML</h1><div class="title-date">2020년 6월 18일 수정</div></header><div id="table-of-contents"role="doc-toc"><h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents"role="doc-toc"><ul><li><a href="#b3350780">대충 치트시트</a></li><li><a href="#3412f0cf">사전형(Dictionary)</a></li><li><a href="#ac86cc37">이진 값(Boolean Value)</a></li><li><a href="#5f525666">리스트(List)</a></li><li><a href="#d04def4b">사전형의 리스트</a></li><li><a href="#e905cbf0">문자열(String)</a></li><li><a href="#57e84f69">수치 표현 시 주의사항</a></li></ul></div></div><p>YAML은 데이터를 표현하기 위한 특수한 언어다. <a href="json.html">JSON</a>과 비슷하게 생각할 수도 있지만 표현 방법이 좀 더 간결한 편이다.</p><p>YAML이라는 이름은 뭔가의 약자 같은데 큰의미를 가지는 것 같지 않아서 굳이 적지 않아도 될 것 같다.</p><p>언어 자체는 들여쓰기 기반이라 <a href="python.html">Python</a>을 연상시킬 수 있다. 그리고 <a href="json.html">JSON</a>의 모습과 비슷한 부분도 있어 보이지만, 리스트를 표현하는 방법에서 색다르기도 하다.</p><div id="outline-container-b3350780"class="outline-2"><h2 id="b3350780">대충 치트시트</h2><div class="outline-text-2"id="text-b3350780"><p>자주 쓰는 문법만 하나로 모아보면 이런 형태다.</p><div class="org-src-container"><pre class="src src-yaml"><span style="color:#5b6268"># </span><span style="color:#5b6268">comment line</span>
-<span style="color:#dcaeea">name</span>: value
-<span style="color:#dcaeea">some name</span>: some value
-<span style="color:#dcaeea">foo</span>: <span style="color:#98be65">"some string with double-quotes"</span>
-<span style="color:#dcaeea">bar</span>: <span style="color:#98be65">'some string with single-quotes'</span>
-<span style="color:#dcaeea">bool1</span>: <span style="color:#a9a1e1">true</span>
-<span style="color:#dcaeea">bool2</span>: <span style="color:#a9a1e1">false</span>
-<span style="color:#dcaeea">bool3</span>: <span style="color:#a9a1e1">yes</span>
-<span style="color:#dcaeea">bool4</span>: <span style="color:#a9a1e1">no</span>
+<!DOCTYPE html><html lang="ko"><head><meta charset="utf-8"><meta name="viewport"content="width=device-width,initial-scale=1"><meta http-equiv="Content-Type"content="text/html; charset=UTF-8"><link rel="stylesheet"href="/static/style.min.css"><meta name="battery-savings"content="allow-reduced-framerate allow-reduced-script-speed"><title>YAML - Seorenn Note</title><meta name="twitter:title"content="YAML"><meta name="og:title"content="YAML"><meta name="description"content="YAML의 간단한 소개"><meta name="twitter:description"content="YAML의 간단한 소개"><meta name="og:description"content="YAML의 간단한 소개"><link rel="canonical"href="https://seorenn.github.io/note/yaml.html"><meta property="og:url"content="https://seorenn.github.io/note/yaml.html"><link rel="shortcut icon"type="image/x-icon"href="/static/favicon.ico"><meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png"><meta property="og:image"content="https://seorenn.github.io/static/seorenn-symbol.png"><meta property="og:image:width"content="520"><meta property="og:image:height"content="329"><meta name="twitter:card"content="summary"><meta name="twitter:site"content="@seorenn"><meta name="twitter:creator"content="@seorenn"><meta property="og:type"content="article"><meta property="og:site_name"content="Seorenn"><meta property="og:locale"content="ko_KR"><meta name="referrer"content="unsafe-url"><meta name="robots"content="follow,index"><meta name="google-site-verification"content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug"><meta name="naver-site-verification"content="24609571c04926ab1220d5d02610efa1c9e12221"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1071465863344332"crossorigin="anonymous"></script><script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-44534026-1")</script></head><body><div class="header-content"><header class="top-header"><div class="logo-container"><span class="vertical-center-helper"></span> <a href="/"title="Seorenn"><img class="site-logo"src="/static/seorenn-note-logo-light.png"alt="Seorenn Note"></a><nav><span class="vertical-center-helper"></span> <a href="/"title="Home">HOME</a> | <a href="/note"title="All Notes">NOTES</a> | <a href="https://seorenn.tistory.com"title="Blog"target="_blank">LOGS</a></nav></div></header></div><div class="content-container"><section class="content"><div class="mid-ad-container"><ins class="adsbygoogle mid-ad"style="display:block"data-ad-client="ca-pub-1071465863344332"data-ad-slot="4306465772"data-ad-format="auto"data-full-width-responsive="true"></ins><script>(adsbygoogle=window.adsbygoogle||[]).push({})</script></div><header><h1>YAML</h1><div class="title-date">2022년 4월 21일 수정</div></header><div id="table-of-contents"role="doc-toc"><h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents"role="doc-toc"><ul><li><a href="#b3350780">대충 치트시트</a></li><li><a href="#3412f0cf">사전형(Dictionary)</a></li><li><a href="#ac86cc37">이진 값(Boolean Value)</a></li><li><a href="#5f525666">리스트(List)</a></li><li><a href="#d04def4b">사전형의 리스트</a></li><li><a href="#e905cbf0">문자열(String)</a></li><li><a href="#57e84f69">수치 표현 시 주의사항</a></li></ul></div></div><p>YAML은 데이터를 표현하기 위한 특수한 언어다. <a href="json.html">JSON</a>과 비슷하게 생각할 수도 있지만 표현 방법이 좀 더 간결한 편이다.</p><p>YAML이라는 이름은 뭔가의 약자 같은데 큰의미를 가지는 것 같지 않아서 굳이 적지 않아도 될 것 같다.</p><p>언어 자체는 들여쓰기 기반이라 <a href="python.html">Python</a>을 연상시킬 수 있다. 그리고 <a href="json.html">JSON</a>의 모습과 비슷한 부분도 있어 보이지만, 리스트를 표현하는 방법에서 색다르기도 하다.</p><div id="outline-container-b3350780"class="outline-2"><h2 id="b3350780">대충 치트시트</h2><div class="outline-text-2"id="text-b3350780"><p>자주 쓰는 문법만 하나로 모아보면 이런 형태다.</p><div class="org-src-container"><pre class="src src-text"># comment line
+name: value
+some name: some value
+foo: "some string with double-quotes"
+bar: 'some string with single-quotes'
+bool1: true
+bool2: false
+bool3: yes
+bool4: no
 
-<span style="color:#dcaeea">list1</span>: [1, 2, 3]
+list1: [1, 2, 3]
 
-<span style="color:#dcaeea">list2</span>:
+list2:
   - 1
   - 2
   - 3
 
-<span style="color:#dcaeea">list-strings</span>: [<span style="color:#98be65">"foo"</span>, <span style="color:#98be65">"bar"</span>, <span style="color:#98be65">"string"</span>]
+list-strings: ["foo", "bar", "string"]
 
-<span style="color:#dcaeea">simple-dict</span>: {<span style="color:#dcaeea">item1</span>: <span style="color:#98be65">"a"</span>, <span style="color:#dcaeea">item2</span>: <span style="color:#98be65">"b"</span>}
-<span style="color:#dcaeea">dict</span>:
-  <span style="color:#dcaeea">item1</span>: <span style="color:#98be65">"string"</span>
-  <span style="color:#dcaeea">item2</span>: 0123      <span style="color:#5b6268"># </span><span style="color:#5b6268">Octet Value</span>
-  <span style="color:#dcaeea">item3</span>:
-    - <span style="color:#dcaeea">subdict1-item1</span>: 1
-      <span style="color:#dcaeea">subdict1-item2</span>: 2
-    - <span style="color:#dcaeea">subdict2-item1</span>: 3
-      <span style="color:#dcaeea">subdict2-item2</span>: 4
+simple-dict: {item1: "a", item2: "b"}
+dict:
+  item1: "string"
+  item2: 0123      # Octet Value
+  item3:
+    - subdict1-item1: 1
+      subdict1-item2: 2
+    - subdict2-item1: 3
+      subdict2-item2: 4
 
-<span style="color:#dcaeea">multiline-string</span>: |
-  <span style="color:#98be65">line1</span>
-<span style="color:#98be65">  line2</span>
-<span style="color:#98be65">  line3</span>
+multiline-string: |
+  line1
+  line2
+  line3
 
-<span style="color:#dcaeea">singleline-string</span>: &gt;
-  <span style="color:#98be65">this is</span>
-<span style="color:#98be65">  not multi-line string,</span>
-<span style="color:#98be65">  just single line</span>
-</pre></div></div></div><div id="outline-container-3412f0cf"class="outline-2"><h2 id="3412f0cf">사전형(Dictionary)</h2><div class="outline-text-2"id="text-3412f0cf"><p>기본적으로 모든 항목이 Dictionary 형태로 되어있다. 즉 <code>key: value</code> 와 같은 형식의 데이터가 이어진다. 그리고 하위 아이템들은 들여쓰기로 구분한다.</p><p>그 외에 <code>simple-dict</code> 처럼 <code>{...}</code> 로 감싸서 표현하는 익숙한(?) 방법이 있다.</p></div></div><div id="outline-container-ac86cc37"class="outline-2"><h2 id="ac86cc37">이진 값(Boolean Value)</h2><div class="outline-text-2"id="text-ac86cc37"><p>위에서 <code>bool</code> 로 시작하는 아이템이 있는데 말 그대로 이진 값을 표현하기 위한 아이템이다. 그리고 이렇게 Boolean을 표현하는 방법이 다양하다. 이 외에도 여러 방식이 있다.</p><div class="org-src-container"><pre class="src src-YAML">bool5: y
+singleline-string: &gt;
+  this is
+  not multi-line string,
+  just single line
+</pre></div></div></div><div id="outline-container-3412f0cf"class="outline-2"><h2 id="3412f0cf">사전형(Dictionary)</h2><div class="outline-text-2"id="text-3412f0cf"><p>기본적으로 모든 항목이 Dictionary 형태로 되어있다. 즉 <code>key: value</code> 와 같은 형식의 데이터가 이어진다. 그리고 하위 아이템들은 들여쓰기로 구분한다.</p><p>그 외에 <code>simple-dict</code> 처럼 <code>{...}</code> 로 감싸서 표현하는 익숙한(?) 방법이 있다.</p></div></div><div id="outline-container-ac86cc37"class="outline-2"><h2 id="ac86cc37">이진 값(Boolean Value)</h2><div class="outline-text-2"id="text-ac86cc37"><p>위에서 <code>bool</code> 로 시작하는 아이템이 있는데 말 그대로 이진 값을 표현하기 위한 아이템이다. 그리고 이렇게 Boolean을 표현하는 방법이 다양하다. 이 외에도 여러 방식이 있다.</p><div class="org-src-container"><pre class="src src-text">bool5: y
 bool6: n
 bool6: on
 bool7: off
-</pre></div><p>심지어 첫 문자만 대문자거나 전체가 대문자인 경우도 Boolean으로 인식한다.</p></div></div><div id="outline-container-5f525666"class="outline-2"><h2 id="5f525666">리스트(List)</h2><div class="outline-text-2"id="text-5f525666"><p>리스트 형태일 경우 <code>[...]</code> 로 감싸거나 혹은 리스트의 각 아이템이 <code>-</code> 로 시작된다.</p><div class="org-src-container"><pre class="src src-yaml"><span style="color:#dcaeea">list1</span>: [1, 2, 3]
-<span style="color:#dcaeea">list2</span>:
+</pre></div><p>심지어 첫 문자만 대문자거나 전체가 대문자인 경우도 Boolean으로 인식한다.</p></div></div><div id="outline-container-5f525666"class="outline-2"><h2 id="5f525666">리스트(List)</h2><div class="outline-text-2"id="text-5f525666"><p>리스트 형태일 경우 <code>[...]</code> 로 감싸거나 혹은 리스트의 각 아이템이 <code>-</code> 로 시작된다.</p><div class="org-src-container"><pre class="src src-text">list1: [1, 2, 3]
+list2:
   - 1
   - 2
   - 3
-</pre></div><p>여기서 list1과 list2가 가지는 아이템은 동일하다.</p></div></div><div id="outline-container-d04def4b"class="outline-2"><h2 id="d04def4b">사전형의 리스트</h2><div class="outline-text-2"id="text-d04def4b"><p>위의 <code>item3</code> 를 표현하는 과정에서 처럼 리스트 아이템을 표시하는 <code>-</code> 를 해석하는 것 때문에 골치아플 수도 있다.</p><div class="org-src-container"><pre class="src src-yaml"><span style="color:#dcaeea">item3</span>:
-  - <span style="color:#dcaeea">subdict1-item1</span>: 1
-    <span style="color:#dcaeea">subdict1-item2</span>: 2
-  - <span style="color:#dcaeea">subdict2-item1</span>: 3
-    <span style="color:#dcaeea">subdict2-item2</span>: 4
+</pre></div><p>여기서 list1과 list2가 가지는 아이템은 동일하다.</p></div></div><div id="outline-container-d04def4b"class="outline-2"><h2 id="d04def4b">사전형의 리스트</h2><div class="outline-text-2"id="text-d04def4b"><p>위의 <code>item3</code> 를 표현하는 과정에서 처럼 리스트 아이템을 표시하는 <code>-</code> 를 해석하는 것 때문에 골치아플 수도 있다.</p><div class="org-src-container"><pre class="src src-text">item3:
+  - subdict1-item1: 1
+    subdict1-item2: 2
+  - subdict2-item1: 3
+    subdict2-item2: 4
 </pre></div><p>위의 표현을 <a href="json.html">JSON</a>으로 표현하자면 아래와 같다.</p><div class="org-src-container"><pre class="src src-json"><span style="color:#51afef">"item3"</span>: [
   {
     <span style="color:#51afef">"subdict1-item1"</span>: <span style="color:#da8548;font-weight:700">1</span>,
@@ -60,4 +60,4 @@ bool7: off
     <span style="color:#51afef">"subdict2-item2"</span>: <span style="color:#da8548;font-weight:700">4</span>
   }
 ]
-</pre></div><p>이 문제는 익숙해지는 수밖에 없다. 개인적으로 이것 때문에 YAML을 좀 싫어하는 편이다. <a href="json.html">JSON</a>이 써야 할 문자는 더 많겠지만 이런 면에선 단순명확한 것 같다.</p></div></div><div id="outline-container-e905cbf0"class="outline-2"><h2 id="e905cbf0">문자열(String)</h2><div class="outline-text-2"id="text-e905cbf0"><p>일반적으로 모든 값은 문자열이라고 생각하자. 다만 정수로 구성된 경우 숫자로 해석된다. 명확하게 하고자 한다면 <code>'...'</code> 나 <code>"..."</code> 로 표기할 수도 있지만 딱히 없어도 상관은 없다.</p><p>긴 문자열의 표현의 위 예에서 <code>|</code> 나 <code>&gt;</code> 로 표현하는 멀티 라인 문자열이나 한 줄 문자열 나눠서 표기하는 방법 등이 종종 사용되기도 한다.</p></div></div><div id="outline-container-57e84f69"class="outline-2"><h2 id="57e84f69">수치 표현 시 주의사항</h2><div class="outline-text-2"id="text-57e84f69"><p>숫자를 표현할 때 조심해야 할 점이 있는데 - 아 물로 이는 YAML 자체의 버전 변경이나 해석 엔진의 변경으로 바뀔 수도 있겠지만 - <code>0</code> 으로 시작하는 숫자는 8진수로 해석이 된다. 이거 때문에 얼마나 고생했는지 표현할 수가 없어서 여기다 따로 정리해 놓을 정도로 주의해야 할지도 모른다.</p><p>그런데 <code>0</code> 으로 시작하는 10진수 정수는 좀 이상하긴 하다. 전화번호 같은 것을 표현하고자 한다면 <code>"..."</code> 처럼 명확하게 문자열로 구분해주는 편이 좋다.</p><p>하여간 이 문제도 YAML을 싫어하게 만든 주범 중 하나다.</p></div></div><div class="mid-ad-container"><ins class="adsbygoogle mid-ad"style="display:block"data-ad-client="ca-pub-1071465863344332"data-ad-slot="4306465772"data-ad-format="auto"data-full-width-responsive="true"></ins><script>(adsbygoogle=window.adsbygoogle||[]).push({})</script></div><div class="backlinks-container"><hr><h1>이 글을 링크하는 글들</h1><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/kubectl.html">❏ kubectl</a></h2><span class="article-description">kubectl 사용법 정리</span><span class="article-link-date"> Updated on 2021년 6월 7일</span></div></div><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/docker-compose-devenv.html">❏ Docker Compose로 개발 환경 단순화하기</a></h2><span class="article-description">많은 도커 컨테이너를 사용하는 개발 환경을 일일이 수동으로 관리하는 것은 힘든데 이럴 때 구원자로 등장한 도커 컴포즈</span><span class="article-link-date"> Updated on 2020년 7월 15일</span></div></div><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/docker-compose.html">❏ Docker Compose</a></h2><span class="article-description">도커 명령을 스펙 파일로 자동화할 수 있는 도구인 Docker Compose(도커 컴포즈)에 대한 간단한 소개 및 예제를 정리하는 글</span><span class="article-link-date"> Updated on 2020년 7월 14일</span></div></div></div></section></div><div class="footer-content"><footer>Copyright 2019 ~ 2020. Seorenn all rights reserved.</footer></div></body></html>
+</pre></div><p>이 문제는 익숙해지는 수밖에 없다. 개인적으로 이것 때문에 YAML을 좀 싫어하는 편이다. <a href="json.html">JSON</a>이 써야 할 문자는 더 많겠지만 이런 면에선 단순명확한 것 같다.</p></div></div><div id="outline-container-e905cbf0"class="outline-2"><h2 id="e905cbf0">문자열(String)</h2><div class="outline-text-2"id="text-e905cbf0"><p>일반적으로 모든 값은 문자열이라고 생각하자. 다만 정수로 구성된 경우 숫자로 해석된다. 명확하게 하고자 한다면 <code>'...'</code> 나 <code>"..."</code> 로 표기할 수도 있지만 딱히 없어도 상관은 없다.</p><p>긴 문자열의 표현의 위 예에서 <code>|</code> 나 <code>&gt;</code> 로 표현하는 멀티 라인 문자열이나 한 줄 문자열 나눠서 표기하는 방법 등이 종종 사용되기도 한다.</p></div></div><div id="outline-container-57e84f69"class="outline-2"><h2 id="57e84f69">수치 표현 시 주의사항</h2><div class="outline-text-2"id="text-57e84f69"><p>숫자를 표현할 때 조심해야 할 점이 있는데 - 아 물로 이는 YAML 자체의 버전 변경이나 해석 엔진의 변경으로 바뀔 수도 있겠지만 - <code>0</code> 으로 시작하는 숫자는 8진수로 해석이 된다. 이거 때문에 얼마나 고생했는지 표현할 수가 없어서 여기다 따로 정리해 놓을 정도로 주의해야 할지도 모른다.</p><p>그런데 <code>0</code> 으로 시작하는 10진수 정수는 좀 이상하긴 하다. 전화번호 같은 것을 표현하고자 한다면 <code>"..."</code> 처럼 명확하게 문자열로 구분해주는 편이 좋다.</p><p>하여간 이 문제도 YAML을 싫어하게 만든 주범 중 하나다.</p></div></div><div class="mid-ad-container"><ins class="adsbygoogle mid-ad"style="display:block"data-ad-client="ca-pub-1071465863344332"data-ad-slot="4306465772"data-ad-format="auto"data-full-width-responsive="true"></ins><script>(adsbygoogle=window.adsbygoogle||[]).push({})</script></div><div class="backlinks-container"><hr><h1>이 글을 링크하는 글들</h1><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/docker-compose-devenv.html">❏ Docker Compose로 개발 환경 단순화하기</a></h2><span class="article-description">많은 도커 컨테이너를 사용하는 개발 환경을 일일이 수동으로 관리하는 것은 힘든데 이럴 때 구원자로 등장한 도커 컴포즈</span><span class="article-link-date"> Updated on 2022년 1월 8일</span></div></div><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/docker-compose.html">❏ Docker Compose</a></h2><span class="article-description">도커 명령을 스펙 파일로 자동화할 수 있는 도구인 Docker Compose(도커 컴포즈)에 대한 간단한 소개 및 예제를 정리하는 글</span><span class="article-link-date"> Updated on 2022년 1월 8일</span></div></div><div class="article-link"><div class="article-link-title-block"><h2><a class="article-link-title"href="/note/kubectl.html">❏ kubectl</a></h2><span class="article-description">kubectl 사용법 정리</span><span class="article-link-date"> Updated on 2021년 6월 7일</span></div></div></div></section></div><div class="footer-content"><footer>Copyright 2019 ~ 2020. Seorenn all rights reserved.</footer></div></body></html>
